Jun 24, 2020
  simplified shell scripts

May 29, 2020
  updated jar dependencies

May 10, 2020
  updated jar dependencies

Dec 19, 2019
  - removed unused log 'spring'

Oct 28, 2019
  - updated dependencies

v. 1.4.8, Apr 12, 2019
  - improved logging

v. 1.4.7, Feb 26, 2019
  - improved logging
  - added logic, when for given species there are no NCBI gene ids in RGD

v. 1.4.6, Jan 22, 2019
  - no longer deletes stale array ids; instead 'retires' them by appending 'old_'

v. 1.4.5, Sep 25, 2018
  - moved from subversion to github

v. 1.4.4, Jun 1, 2017
  - added support for other species; currently there is data for DOG

v. 1.4.3, Mar 20, 2017
  - upgraded from ANT to GRADLE

v. 1.4.2, Nov 21, 2014
  - updated jars, improved logging

v. 1.4.1, Aug 11, 2014
  - updated jars, improved logging

v. 1.4.0, Mar 31, 2014
  - list of affymetrix types is no longer using file properties - it is downloaded automatically
    from synergizer website; that provides most flexibility
  - updated jars

v. 1.3.1, Mar 7, 2014
  - improved conflict resolution (filtered out mappings of GeneId=>(gene splices and alleles)
  - improved logging (shorter and more relevant log files)
  - updated jars

v. 1.3, Aug 20, 2013
  - changed load scheme for drop-and-reload to incremental-load to improve performance
  - added logs insertedAffyIds and deletedAffyIds