@@ -39,6 +39,16 @@ log4j.appender.retiredAffyIds.layout.ConversionPattern=%d %p [%c] - %m%n
 log4j.appender.retiredAffyIds.DatePattern='.'yyyy-MM
 log4j.appender.retiredAffyIds.Append=true
 
+# deleted affy ids
+log4j.logger.deletedAffyIds=INFO, deletedAffyIds
+log4j.additivity.deletedAffyIds=false
+log4j.appender.deletedAffyIds=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.deletedAffyIds.Threshold=INFO
+log4j.appender.deletedAffyIds.File=./logs/deletedAffyIds.log
+log4j.appender.deletedAffyIds.layout=org.apache.log4j.PatternLayout
+log4j.appender.deletedAffyIds.layout.ConversionPattern=%d %p [%c] - %m%n
+log4j.appender.deletedAffyIds.DatePattern='.'yyyy-MM
+log4j.appender.deletedAffyIds.Append=true
 
 # Standard output appender
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
